/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

option go_package = "protos";
option cc_generic_services = true;

package protos;

import "commands.proto";

// ViewService provides support to view management
service ViewService {
    // ProcessCommand processes the passed command ensuring proper access control.
    // The returned response allows the client to understand if the
    // operation was successfully executed and if not, the response
    // reports the reason of the failure.
    rpc ProcessCommand(SignedCommand) returns (SignedCommandResponse);

    rpc StreamCommand(SignedCommand) returns (stream SignedCommandResponse){};
}
